[gd_scene load_steps=7 format=3 uid="uid://cdjl8jv4nul11"]

[ext_resource type="Script" uid="uid://cwfi6j56r5w5w" path="res://UI-Scenes/game_over_menu.gd" id="1_frwrx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jom53"]
bg_color = Color(0.226708, 0.226707, 0.226707, 0.95)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gylin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frwrx"]
bg_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0dclf"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsavm"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_frwrx")

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jom53")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RestartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_gylin")
theme_override_styles/hover = SubResource("StyleBoxFlat_frwrx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0dclf")
theme_override_styles/normal = SubResource("StyleBoxFlat_fsavm")
action_mode = 0
text = "RESTART"
icon_alignment = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_gylin")
theme_override_styles/hover = SubResource("StyleBoxFlat_frwrx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0dclf")
theme_override_styles/normal = SubResource("StyleBoxFlat_fsavm")
action_mode = 0
text = "MAIN MENU"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_gylin")
theme_override_styles/hover = SubResource("StyleBoxFlat_frwrx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0dclf")
theme_override_styles/normal = SubResource("StyleBoxFlat_fsavm")
action_mode = 0
text = "EXIT"
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
